--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.4.1",
     "i": "^0.3.6",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.26.0",
     "purecss": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
